--- a/pom.xml
+++ b/pom.xml
@@ -6,24 +6,30 @@
 	<version>0.0.2-SNAPSHOT</version>
 	<name>JRivets - Java components for general usage</name>
 
+	<properties>
+		<log4j.version>1.2.16</log4j.version>
+		<testng.version>6.8</testng.version>
+		<mockito-all.version>1.9.0</mockito-all.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.16</version>
+			<version>${log4j.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.9</version>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>${testng.version}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
-			<version>1.9.0</version>
+			<version>${mockito-all.version}</version>
 			<scope>test</scope>
 		</dependency>
 
