--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jrivets</groupId>
-	<artifactId>jrivets</artifactId>
+	<artifactId>jrivets-common</artifactId>
 	<version>0.0.3-SNAPSHOT</version>
 	<name>JRivets - Java components for general usage</name>
 
